src/objects/Sync_Log__c.object
<CustomObject>
    <description>Full process logging of Episys to MARS sync</description>
    <fields>
        <fullName>ARCU_Process_Date__c</fullName>
        <label>ARCU Process Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cut_Off_Date__c</fullName>
        <label>Cut Off Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MARS_Flag__c</fullName>
        <label>MARS Flag</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Process_Engine_Name__c</fullName>
        <label>Process Engine Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Process_In_System__c</fullName>
        <label>Process In System</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Process_Notes__c</fullName>
        <label>Process Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Process_Status__c</fullName>
        <label>Process Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Process_Timestamp__c</fullName>
        <label>Process Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Rec_ID__c</fullName>
        <externalId>true</externalId>
        <label>Rec_ID</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <label>Sync Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Rec_ID__c</columns>
        <columns>Process_Timestamp__c</columns>
        <columns>Process_Engine_Name__c</columns>
        <columns>Process_Status__c</columns>
        <columns>Process_Notes__c</columns>
        <columns>Process_In_System__c</columns>
        <columns>ARCU_Process_Date__c</columns>
        <columns>Cut_Off_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>01 All</label>
    </listViews>
    <listViews>
        <fullName>Process_Accounts</fullName>
        <columns>Rec_ID__c</columns>
        <columns>Process_Timestamp__c</columns>
        <columns>Process_Engine_Name__c</columns>
        <columns>Process_Status__c</columns>
        <columns>Process_Notes__c</columns>
        <columns>Process_In_System__c</columns>
        <columns>ARCU_Process_Date__c</columns>
        <columns>Cut_Off_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Process_Engine_Name__c</field>
            <operation>equals</operation>
            <value>EngineAccounts</value>
        </filters>
        <label>P2 - Accounts</label>
    </listViews>
    <listViews>
        <fullName>Process_Episys_Names</fullName>
        <columns>Rec_ID__c</columns>
        <columns>Process_Timestamp__c</columns>
        <columns>Process_Engine_Name__c</columns>
        <columns>Process_Status__c</columns>
        <columns>Process_Notes__c</columns>
        <columns>Process_In_System__c</columns>
        <columns>ARCU_Process_Date__c</columns>
        <columns>Cut_Off_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Process_Engine_Name__c</field>
            <operation>equals</operation>
            <value>EngineEpisysNames</value>
        </filters>
        <label>P1 - Episys Names</label>
    </listViews>
    <listViews>
        <fullName>Process_Episys_Notes</fullName>
        <columns>Rec_ID__c</columns>
        <columns>Process_Timestamp__c</columns>
        <columns>Process_Engine_Name__c</columns>
        <columns>Process_Status__c</columns>
        <columns>Process_Notes__c</columns>
        <columns>Process_In_System__c</columns>
        <columns>ARCU_Process_Date__c</columns>
        <columns>Cut_Off_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Process_Engine_Name__c</field>
            <operation>equals</operation>
            <value>EngineNotes</value>
        </filters>
        <label>P5 - Episys Notes</label>
    </listViews>
    <listViews>
        <fullName>Process_Person_Accounts</fullName>
        <columns>Rec_ID__c</columns>
        <columns>Process_Timestamp__c</columns>
        <columns>Process_Engine_Name__c</columns>
        <columns>Process_Status__c</columns>
        <columns>Process_Notes__c</columns>
        <columns>Process_In_System__c</columns>
        <columns>ARCU_Process_Date__c</columns>
        <columns>Cut_Off_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Process_Engine_Name__c</field>
            <operation>equals</operation>
            <value>EnginePersonAcct</value>
        </filters>
        <label>P4 - Person Accounts</label>
    </listViews>
    <listViews>
        <fullName>Process_Persons</fullName>
        <columns>Rec_ID__c</columns>
        <columns>Process_Timestamp__c</columns>
        <columns>Process_Engine_Name__c</columns>
        <columns>Process_Status__c</columns>
        <columns>Process_Notes__c</columns>
        <columns>Process_In_System__c</columns>
        <columns>ARCU_Process_Date__c</columns>
        <columns>Cut_Off_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Process_Engine_Name__c</field>
            <operation>equals</operation>
            <value>EnginePerson</value>
        </filters>
        <label>P3 - Persons</label>
    </listViews>
    <listViews>
        <fullName>Today</fullName>
        <columns>Rec_ID__c</columns>
        <columns>Process_Timestamp__c</columns>
        <columns>Process_Engine_Name__c</columns>
        <columns>Process_Status__c</columns>
        <columns>Process_Notes__c</columns>
        <columns>Process_In_System__c</columns>
        <columns>ARCU_Process_Date__c</columns>
        <columns>Cut_Off_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Process_Timestamp__c</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <label>02 Today</label>
    </listViews>
    <listViews>
        <fullName>Yesterday</fullName>
        <columns>Rec_ID__c</columns>
        <columns>Process_Timestamp__c</columns>
        <columns>Process_Engine_Name__c</columns>
        <columns>Process_Status__c</columns>
        <columns>Process_Notes__c</columns>
        <columns>Process_In_System__c</columns>
        <columns>ARCU_Process_Date__c</columns>
        <columns>Cut_Off_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Process_Timestamp__c</field>
            <operation>equals</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>03 Yesterday</label>
    </listViews>
    <nameField>
        <label>Sync Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sync Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>